Kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: your-app
  template:
    metadata:
      labels:
        app: your-app
    spec:
      containers:
      - name: your-app
        image: fabiandiaz1512/mi_aplicacion:latest
        ports:
        - containerPort: 8080 # Puerto en el que tu aplicación escucha las solicitudes
