Kubernets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-app-service
spec:
  selector:
    app: your-app
  ports:
    - protocol: TCP
      port: 8080 # Puerto del servicio Kubernetes
      targetPort: 8080 # Puerto en el contenedor donde tu aplicación está escuchando
